2004-06-23  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed problems w/having plasma statements in inlined-methods.

2004-06-22  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bugs:

	1. We weren't migrating the scheduling thread from a busy
	processor to the new processor chosen.  Fixed this by adding to
	QBase a prev pointer and adding a remove function to Queue that
	lets a thread be removed in O(1) time.  This allows Cluster::busy
	to remove the scheduling thread from where it was and add it to
	the new processor.

	2. Fixed bug w/pfor:  We weren't supporting on blocks.

	3. Added a Processors class, which is just a vector of Processor
	objects.  However, the constructor lets you create N unique
	processors.  Just creating a vector and giving it Processor() as
	an argument means that you'd end up with an array all pointing to
	the same Proc.

2004-06-18  Brian Kahne  <bkahne@ibmoto.com>

	* Added mutex I/O routines which mirror the printf suite.  Still
	don't have a good solution for cout- probably just need to wrap it
	in a macro with pLock()/pUnlock() calls.

	* Added the Timeout class.  This is a channel that will deliver a
	value in an alt block after a specified amount of time (using
	pDelay).  Example:

		Timeout t(20);
		alt {
		  t.port() { cout << "Got a timeout!" << endl; }
		}

	The constructor requires a timeout value; this may be changed or
	read via methods.  No useful value is returned via the port, so
	you normally wouldn't map the return to a value.

	* Fixed a bug in Cluster::update_time():  If we updated the time
	and added a delay thread, it was possible that the thread had been
	terminated, so it wouldn't be added.  So we'd end up adding an
	empty processor to the processor queue, which would cause us to
	exit.  Fixed this by checking that at the end, _curproc has
	something to run.  If not, we mark the processor as waiting and
	try again.

	* Added the ability to start a thread with an explicit priority.
	This is done as follows:
