@@ -563,7 +563,7 @@ the collector will collect it when it is safe to do so.</p>
 <hr class="footer"/>
 <div class="footer">
 <a class="reference" href="user-guide.rst">View document source</a>.
-Generated on: 2004/06/22 14:41:25 CDT.
+Generated on: 2004/06/25 11:35:58 CDT.
 Generated by trip.prl release 1.2.2 from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 </div>
 </body>
