@@ -29,6 +29,11 @@ my @Tests = (
 	      cmd     => "./par4",
 	      checker => \&check_par1,
 	     },
+	     # Check that nested pars work.
+	     {
+	      cmd     => "./par5",
+	      checker => \&check_par5,
+	     },
 	     # Quicksort with parallel sorting of split elements.
 	     {
 	      cmd     => "./qsort",
@@ -269,6 +274,28 @@ sub check_par3 {
       }
     }
   }
+}
+
+# Test of nested pars.
+sub check_par5 {
+  my %count = (
+	       1.1 => 0,
+	       1.21 => 0, 
+	       1.22 => 0,
+	       1.3  => 0,
+	       2.0 => 0,
+	       3.0 => 0,
+	       10.1 => 0,
+	       10.2 => 0,
+	       10.3 => 0,
+	       20 => 0,
+	       30 => 0,
+	      );
+  check_sequence(@_[0],0,\%count);
+
+  my @exp1 = ( 1.1, 1.2, 1.3, 4, 5 );
+  my @exp2 = ( 10, 20, 30, 40, 50);
+  check_spawn($_[0], \@exp1, \@exp2 );
 }
 
 # Just make sure that we got the right number of messages.
@@ -626,10 +653,12 @@ sub check_sequence {
       ++$final;
     }
   }
-
-  if ( $iseq !~ $seq) {
-    print "Error:  Bad sequence.  Expected '$seq', found '$iseq'.\n";
-    die;
+  
+  if ($seq) {
+    if ( $iseq !~ $seq) {
+      print "Error:  Bad sequence.  Expected '$seq', found '$iseq'.\n";
+      die;
+    }
   }
 
   for my $i (keys(%done)) {
@@ -641,7 +670,7 @@ sub check_sequence {
 
   for my $i (keys(%$count)) {
     if ($count->{$i}) {
-      print "Error:  Did not find a expected number of messages from block $i:  Expected $count->{$i} more.\n";
+      print "Error:  Did not find expected number of messages from block $i:  Expected $count->{$i} more.\n";
       die;
     }
   }
